services/makemkv/resources/makemkv.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      nodeSelector:
        optical-drives: 'true'
      containers:
        - image: jlesage/makemkv:v24.01.1
          name: makemkv
          securityContext:
            privileged: true
          ports:
            - name: web
              containerPort: 5800
          volumeMounts:
            - name: ripping-storage
              mountPath: /output
            - name: sr0
              mountPath: /dev/sr0
      volumes:
        - name: ripping-storage
          persistentVolumeClaim:
            claimName: truenas-ripping-storage
        - name: sr0
          hostPath:
            path: /dev/sr0

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: service
      port:
        name: web
  tls:
    - hosts:
        - makemkv
